# auto-bdsp-rng

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  LICENSE.txt  README.md  RELEASE.md  SPONSORS.md  TECH_STACK.md  TODO.md  TODO_EASYCON_INTEGRATION.md  build_exe.bat  findings.md  progress.md  pyproject.toml  setup.py  task_plan.md
.github/workflows/: build-windows-release.yml
bridge/EasyConBridge/: BridgeModels.cs  BridgeOutputAdapter.cs  EasyConBridge.csproj  EasyConSession.cs  FakeEasyConSession.cs  IEasyConSession.cs  IPersistentSessionDiagnostics.cs  JsonLineBridgeServer.cs  Program.cs  README.md
docs/: auto_rng_design.md  auto_rng_todo.md  easycon_bridge_protocol.md  easycon_real_com_validation.md  project_xs_integration.md
packaging/: auto-bdsp-rng.spec  entry_gui.py
script/: BDSP地下测种.txt  BDSP测种.txt  bdsp过帧.txt  地下翻图鉴.txt  地下过图鉴.txt  录屏.txt  捕捉反查脚本.txt  玫瑰公园.txt  翻图鉴.txt  谢米.txt  谢米运行情况.txt  过图鉴.txt  阿尔宙斯.txt
scripts/: build_exe.py
src/auto_bdsp_rng/: __init__.py  __main__.py  app_settings.py  resources.py
tests/: test_cli.py  test_easycon_panel.py  test_help_support_ui.py  test_packaging.py  test_resources.py  test_startup.py  test_ui.py
tests/automation/: test_auto_rng_runner.py  test_auto_rng_scripts.py  test_auto_rng_search.py  test_dialog_timing.py  test_easycon_bridge_backend.py  test_easycon_cli_backend.py  test_easycon_discovery.py  test_easycon_process.py  test_easycon_scripts.py  test_pokemon_info_ocr.py
tests/blink_detection/: test_project_xs_adapter.py
tests/data/: test_bdsp_data.py
tests/rng_core/: test_seed.py  (+2 more)
(+57 files in other folders)
